forth/test/fail/test_dot_call_plain_intrin_inline.af
\ Must fail to compile.
fun: test_dot_call_plain_intrin_inline_fail { -- err }
  [ inline ]
end
